# waypoint_manager_cpp

./: CMakeLists.txt  package.xml
config/: config_waypoint_manager_cpp.yaml
include/waypoint_manager_cpp/: load_waypoints.hpp  visibility_control.h  waypoint_manager_cpp_component.hpp
launch/: waypoint_manager_cpp.launch.py
src/: waypoint_manager_cpp_component.cpp  waypoint_manager_cpp_node.cpp
